# COLOR-GRADING-APP-TEST

./: .gitignore  CLAUDE.md  CMakeLists.txt  QUICKSTART.md  README.md  build.bat  build.sh
examples/: CMakeLists.txt  ColorCorrectionPlugin.cpp  Info.plist.in
include/ofx/: ofxCore.h  ofxImageEffect.h  ofxParam.h  ofxProperty.h
src/: CMakeLists.txt  ofxUtilities.cpp  ofxUtilities.h
